KMotion_dotNet/DM CoodMotion/KM_CoordMotion_Interop.cs


        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_StraightTraverse
            (IntPtr handle, double x, double y, double z, double a, double b, double c, bool NoCallback);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_ArcFeed
            (IntPtr handle, double DesiredFeedRate_in_per_sec, int plane,
            double first_end, double second_end,
            double first_axis, double second_axis, int rotation,
            double axis_end_point, double a, double b, double c, int sequence_number, int ID);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_ArcFeedAccel
            (IntPtr handle, double DesiredFeedRate_in_per_sec, double DesiredAccel, int plane,
            double first_end, double second_end,
            double first_axis, double second_axis, int rotation,
            double axis_end_point, double a, double b, double c, int sequence_number, int ID);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_StraightFeed
            (IntPtr handle, double DesiredFeedRate_in_per_sec,
            double x, double y, double z, double a, double b, double c,
            int sequence_number, int ID);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_StraightFeedAccel
            (IntPtr handle, double DesiredFeedRate_in_per_sec, double DesiredAccel,
            double x, double y, double z, double a, double b, double c,
            int sequence_number, int ID);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_CoordMotion_SetStraightTraverseCallback(IntPtr handle, KM_CoordMotionStraightTraverseSixAxisHandler handler);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_CoordMotion_SetStraightFeedCallback(IntPtr handle, KM_CoordMotionStraightFeedSixAxisHandler handler);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_CoordMotion_SetArcFeedCallback(IntPtr handle, KM_CoordMotionArcFeedSixAxisHandler handler);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_DownloadDoneSegments(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_OutputSegment(IntPtr handle, int iseg);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_DoSpecialCommand(IntPtr handle, int iseg);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_DoRateAdjustments(IntPtr handle, int i0, int i1, double FeedRate);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_GetAxisDefinitions
            (IntPtr handle, ref int x, ref int y, ref int z, ref int a, ref int b, ref int c);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_ReadCurAbsPosition
            (IntPtr handle, ref double x, ref double y, ref double z, ref double a, ref double b, ref double c, bool snap);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_ReadAndSyncCurPositions
            (IntPtr handle, ref double x, ref double y, ref double z, ref double a, ref double b, ref double c);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_CoordMotion_SetTPParams(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_CoordMotion_Dwell(IntPtr handle, double seconds, int sequence_number);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern int KM_dotnet_Interop_CoordMotion_DownloadedSegmentCount(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_CoordMotion_TotalDownloadedTime(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_CoordMotion_TimeAlreadyExecuted(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern double KM_dotnet_Interop_CoordMotion_RemainingTime(IntPtr handle);

        [return: MarshalAs(UnmanagedType.I1)]
        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern bool KM_dotnet_Interop_CoordMotion_Get_Simulate(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_CoordMotion_Set_Simulate(IntPtr handle, bool value);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern PREV_STOP_TYPE KM_dotnet_Interop_CoordMotion_Get_PreviouslyStopped(IntPtr handle);

        [DllImport("KMotion_dotNet_Interop.dll")]
        static extern void KM_dotnet_Interop_CoordMotion_Set_PreviouslyStopped(IntPtr handle, PREV_STOP_TYPE value);

    }
    #endregion
}
